# homelab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  ansible.cfg  docker-compose.dev.yml  docker-compose.yml  install.sh
agent/: Dockerfile  pyproject.toml
agent/src/: __init__.py  agent.py  auth.py  config.py  connection.py  handler_setup.py  main.py  security.py
agent/src/collectors/: __init__.py  health.py  metrics.py
agent/src/lib/: __init__.py  audit.py  encryption.py  permissions.py  rate_limiter.py  redact.py  replay.py
agent/src/rpc/: __init__.py  agent_handlers.py  errors.py  handler.py  responses.py
agent/tests/: conftest.py  test_agent.py  test_agent_handlers.py  test_agent_methods.py  test_audit.py  test_auth.py  test_collectors.py  test_config.py  test_connection.py  test_docker_client.py  test_docker_methods.py  test_handler_setup.py  test_main.py  test_rpc_errors.py  test_rpc_handler.py  test_rpc_responses.py  test_security.py  test_system_methods.py  test_validation_extended.py
backend/: .env-default  .env_example  README.md  coverage.xml  debug_user_data.py  implementation_guide.md  init_database.py  init_settings_database.py  pyproject.toml  requirements.txt  reset_admin_password.py
backend/data/: homelab.db
backend/data/catalog/: jellyfin.yaml  nextcloud.yaml  nginx-proxy-manager.yaml  pihole.yaml  portainer.yaml
backend/sql/: init_settings_schema.sql  migrate_existing_installation.sql  seed_default_settings.sql
backend/src/: cli.py  init_settings_database.py  main.py
backend/src/app_logging/: __init__.py  app_logs.py
backend/src/data/: application_seed_data.py
backend/src/database/: connection.py
backend/src/exceptions/: __init__.py  app_exceptions.py
backend/src/init_db/: schema_account_locks.py  schema_agents.py  schema_apps.py  schema_apps_old.py  schema_component_versions.py  schema_logs.py  schema_marketplace.py  schema_metrics.py  schema_notifications.py  schema_preparation.py  schema_retention.py  schema_servers.py  schema_sessions.py  schema_system_info.py  schema_users.py
backend/src/lib/: __init__.py  auth_helpers.py  config.py  encryption.py  git_sync.py  log_event.py  logging_config.py  rate_limiter.py  security.py  tool_loader.py
backend/src/models/: __init__.py  agent.py  app.py  app_catalog.py  auth.py  log.py  marketplace.py  metrics.py  notification.py  preparation.py  retention.py  server.py  session.py  settings.py
backend/src/services/: __init__.py  activity_service.py  agent_lifecycle.py  agent_manager.py  agent_packager.py  agent_rotation.py  agent_service.py  agent_websocket.py  app_service.py  auth_service.py  backup_service.py  catalog_service.py  command_router.py  csrf_service.py  dashboard_service.py  database_service.py  deployment_service.py  factory.py  marketplace_service.py  metrics_service.py  monitoring_service.py  notification_service.py  password_blocklist_service.py  preparation_service.py  rate_limit_service.py  retention_service.py  server_service.py  service_log.py  session_service.py  settings_audit.py  settings_schema.py  settings_service.py  ssh_helpers.py  ssh_service.py
backend/src/tests/: conftest.py
backend/src/tools/: __init__.py  app_tools.py  auth_tools.py  backup_tools.py  common.py  health_tools.py  marketplace_tools.py  metrics_tools.py  monitoring_tools.py  preparation_tools.py  retention_tools.py  server_tools.py  settings_tools.py
backend/tests/: __init__.py  conftest.py  test_app_service.py  test_auth.py  test_auth_service.py  test_database_auth.py  test_improved_logout.py  test_integration.py  test_login_debug.py  test_login_logging.py  test_logout_integration.py  test_logout_logging.py  test_mcp_connection.py  test_mcp_logout.py
backend/tests/integration/: __init__.py  test_agent_rotation.py  test_auth_logging_integration.py  test_auth_service_logging.py  test_mcp_server.py  test_retention_integration.py  test_settings_integration_comprehensive.py  test_settings_migration.py
backend/tests/security/: test_retention_security.py  test_settings_security_comprehensive.py
backend/tests/unit/: __init__.py  test_activity_service.py  test_agent_auth.py  test_agent_executor.py  test_agent_lifecycle.py  test_agent_manager.py  test_agent_packager.py  test_agent_service.py  test_agent_tools.py  (+64 more)
(+1142 files in other folders)
