[project]
name = "tomo-agent"
version = "0.1.0"
description = "Tomo Remote Agent"
authors = [
    {name = "Christophe Babilotte", email = "christophe@babilotte.com"}
]
license = {text = "SEE LICENSE IN LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "docker>=7.0",
    "psutil>=5.9",
    "pydantic>=2.0",
    "certifi>=2024.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
