[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-assistant-backend"
version = "0.1.0"
description = "Homelab Assistant MCP Server"
authors = [
    {name = "Homelab Assistant", email = "noreply@homelab.local"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "paramiko>=3.0.0",
    "docker>=6.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "cryptography>=41.0.0",
    "uvicorn>=0.23.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
    "factory-boy>=3.2.0"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "slow: Slow running tests"
]