[project]
name = "tomo-backend"
version = "0.1.0"
description = "Tomo MCP Server"
authors = [
    {name = "Christophe Babilotte", email = "christophe@babilotte.com"}
]
license = {text = "SEE LICENSE IN LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "paramiko>=3.0.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "uvicorn>=0.30.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=90",
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security-focused tests",
    "slow: Slow running tests"
]
